@@ -216,6 +216,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #15505: `unittest.installHandler` no longer assumes SIGINT handler is
+  set to a callable object.
+
 - Issue #12004: Fix an internal error in PyZipFile when writing an invalid
   Python file.  Patch by Ben Morgan.
 
